<resources>
    <string name="app_name">የቤተሰብ ህይወት</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">የቤተሰብ ህይወት </string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="homeactionbar">ቤት </string>
    <string name="mainactivityheader">የቤተሰብ ህይወት </string>
    <string name="maleactionbar">10ቱ ትእዛዛት ለባሎች </string>
    <string name="femaleactionbar">10ቱ ትእዛዛት ለሚስቶች </string>
    <string name="twoarrow">ወደ ቀጣይ ህግ እለፍ </string>
    <string name="backarrow">ወደ ቀደመው ህግ ተመለስ </string>
    <string name="footer">\n\n\tተጨማሪ አስተያየት ወይም ጥያቄ ካለዎት በአድራሻችን ይፃፉልን \n\t www.habeshastudent.com</string>
    <string name="aboutus">ይህ የሞባይል አፕሊኬሽን በግሬት ኮሚሽን ሚኒስትሪ ኢትዮጵያ የተዘጋጀ ሲሆን 
   ተጨማሪ አስተያየት ወይም ጥያቄ ካለዎት በአድራሻችን ይፃፉልን፡፡\n
         በቅርቡም በጋብቻና በቅድመ ጋብቻ ዙርያ ከአዳዲስ ፊቸሮች ጋር ትምህርቶችን ይዘን እንቀርባለን፡፡</string>
    <string name="teleshtaol">በ0116174400 ግሬት ኮሚሽን ኢትዮጵያ ቢሮ በመደወል ልዩ ልዩ እለታዊ አስተማሪ መልእክቶችን እና የማማከር አገልግሎቶችን ማግኘት ይችላሉ፡፡\n

በተጨማሪም ከሰኞ እስከ አርብ በስራ ሰአት ከጥዋቱ 3፡00 ሰአት እስከ 11፡00 ሰአት ባለሙያወችን በቅድመ ጋብቻ እና በትዳር እንዲሁም በፀሎት እና ሌሎች መንፈሳዊ አገልግሎቶችን በስልክ ማግኘት ይችላሉ፡፡  </string>
    <string name="taboneheader">1. ቅድሚያዎችህን በጥንቃቄ ጠብቃቸው፡፡</string>
    <string name="tabonemiddle">ሕግ ቁጥር አንድ፡-የመጀመሪያው ሥራህ ቤተሰብህን መገንባት ይሁን፡፡</string>
    <string name="tabonedetails">ቤተሰብህ ከዘመዶችህ፣ ከሥራህ፣ ከጓደኞችህና አለኝ ከምትላቸው ወዳጆችህ ሁሉ ይበልጣል፡፡ ነገር ግን አብዛኛውን ጊዜ ባሎች ለቤተሰባችን የምንሰጠው ስፍራ ከሁሉም ጉዳዮቻችን የመጨረሻውን እንደሆነ በድርጊቶቻችን እንገልጻለን፡፡\n\n\t
          ታሪኩን እንዲህ ብሎ ያጫወተኝን የኢንሹራንስ ድርጅት ፕሬዜዳንት ትመስል ይሆን? ያ ሰው እንዲህ አለ፡- «ሥራዬን በተመለከተ በእርግጠኝነት ስኬታማ ሰው ነኝ፡፡ በእኔ ኃላፊነት ሥር 2000 ሰራተኞችን አስተዳድራለሁ፡፡ የቤተሰቤን ሁኔታ ስመለከት ግን እጅግ ያልተሳካልኝ ሰው ነኝ ብዬ እፈራለሁ»፡፡ \n\n\t ዊሊያም ልዮን የተባለው ጸሐፊም የሚከተለውን ሃሳብ ሲጽፍ ይህንን እውነት አገናዝቦ ሳይሆን አይቀርም፡፡ «በምድር ላይ እጅግ ከፍተኛው ደስታ የሚገኘው በጋብቻ ውስጥ ነው፡፡ \n\n\tማንኛውም ሰው በጋብቻ ሕይወቱ ደስተኛ ከሆነ በሌላ ነገር ባይሳካለት እንኳ እርሱ ሥኬታማ ሰው ነው»፡፡
          እኛ ሰዎች ብዙ ጊዜ መሳሳታችንን የምናውቀው እጅግ ዘግይተን ሲሆን ካወቅንም በኋላ ከማስተካከል ይልቅ በቸልታ ማለፉ ይቀለናል፡፡ ሆኖም በጊዜ ቆይታ ሳናስተካክለው በቸልታ ካለፍነው የስህተታችን ውጤቶች ጋር በቀላሉ ልናስወግደው በማንችልበት መንገድ እንፋጠጣለን፡፡ እንዲህ ባለ ጊዜ ተስፋ ይኖረን ይሆን? እናንተ ባሎች በቤታችሁ ወይም በቤተሰባችሁ እና በሥራችሁ መካከል ግጭቶች እንዳሉ ሲሰማችሁ ተገቢ ውሳኔ መወሰን እንድትችሉ የሚረዳችሁን ጥቂት ሀሳብ ላካፍላችሁ፡፡ \n\n\tአስተውሉ ተግባሮቻችን ከእግዚአብሔር ፈቃድ ጋር አይጋጩም፡፡  
          በዚህ ትምህርት መሰረት ከቤተስብህ ሌላ ቅድሚያ የምትስጣቸው ነግሮች ምንድን ናቸው? ምን እርምጃስ ለመውሰድ ታስባለህ?</string>
    <string name="tabtwoheader">2. የሚስትህን ፍላጎት አሟላ!</string>
    <string name="tabtwomiddle">ሚስትህ ከምግብ፣ ከልብስና ከመጠለያ ያለፈ ፍላጎት እንዳላት አትዘንጋ፡፡</string>
    <string name="tabtwodetails">ብዙ ጊዜ ባሎች የሚስቶቻቸውን ፍላጎቶች እንዲዘረዝሩ ስጠይቃቸው የሚመልሱልኝ የመጀመሪያዎቹ ሦስቱና ዋነኞቹ ፍላጎቶቿ ምግብ፣ ልብሶችና ከራሷ በላይ ያለ ጣራ ወይም መጠለያ በማለት ነው፡፡
          \n\n\tነገር ግን ስሜታዊ ፍላጎቶቿስ? የጓደኝነት፣ የግንኙነት፣ ወዳጅ የማግኘት ፍላጎቶቿስ? አንዲት የማውቃት ሴት እንዲህ ስትል ሰምቻታለሁ «ባሌ እንደሚያፈቅረኝ አውቃለሁ፡፡ ነገር ግን ጥሩ ጓደኛሞች አይደለንም»፡፡ ለምን? ቢባል የዚህች ሴት ባል የአንድ ግዙፍ ድርጅት መሪ በመሆኑ ቀን በሥራ ቦታው ብዙ ሲደክም ይውላል፡፡ ስለዚህም እቤቱ ሲገባ አእምሮው በብዙ ነገሮች ተወጥሮ ስለሆነ ለሚስቱ የሚሰጠው ጊዜ አይኖረውም፡፡ \n\n\t ሐዋርያው ጳውሎስ እንደዚህ ይላል «አንድ ሰው ዘመዶቹን በተለይም የቅርብ ቤተሰቡን (ሚስቱንም ጨምሮ) የማይረዳ ከሆነ ኃይማኖቱን የካደ ከማያምንም ሰው ይልቅ የባሰ ክፉ ነው (1ጢሞ 5፡8)፡፡ ስለዚህ ሚስትህ ከምንም ነገር በላይ አብረሃት እንድትሆንና ተገቢ ጊዜ እንድትሰጣት እንደምትፈልግ አትርሳ፡፡</string>
    <string name="tabthreeheader">3. ሚስትህን በቸልታ አትመልከታት!</string>
    <string name="tabthreemiddle">ለባሎች የተሰጠው ሦስተኛው  ሕግ በሦስት ቃላት አንሶ የተጠቃለለ ቢሆንም ከዘላቂ ውጤቶቹ አንፃር ግን እጅግ አስፈላጊ ነው፡፡ </string>
    <string name="tabthreedetails">ከጥቂት ዓመታት በፊት ኢርቪንግ ቢርሊን የተባለው ጸሀፊ ብዙ ጊዜ በሠርግ ሥርዓት ላይ በመዘመር በሚታወቀው መዝሙር በተለይም (ምንጊዜም እወድሻለሁ፣ በእውነተኛ ፍቅር ሁልጊዜ) በሚለው ክፍል ላይ ተመስርቶ እንዲህ ሲል ጻፈ፡- «ይህ ቃል ኪዳን ምንጊዜም ሊረሳ አይገባውም፡፡ ስሜቱ ቢኖርም ባይኖርም»፡፡ ከላይ የተጠቀሱት የመዝሙሩ ቃላት የሚሰማቸውን ሰው ልብ የሚያሞቁ ናቸው፡፡ \n\n\tነገር ግን ሙሉ በሙሉ እውነት አይደሉም፡፡ ምክንያቱም ሰብዓዊው የፍቅር ግንኙነት ዘለዓለማዊነት ያለው አይደለም፡፡ ለአንድ ሰው ያለን ልባዊ ፍቅር ለዘለዓለም እንደሚፀና ብናስብም ነገር ግን የነበረን ፍቅር ከተለያዩ ምክንያቶች የተነሳ ሊሞት እንደሚችል መዘንጋት የለብንም፡፡\n\n\t
            \n\n\t የቤተሰብ ጉዳዮችን በመስማት ሲሰራ ለቆየ ለአንድ የሕግ ሰው የተቃራኒ ጾታ ፍቅርን አስመልክቶ ጥያቄ ቢቀርብለት የሚሰጠው ምላሽ ይሀ አይነቱ ፍቅር ሊወድም የሚችል መሆኑን ነው፡፡ ፍቅር እንዳይሞት ቀን በቀን መጠበቅ አለበት፡፡ ፍቅር ሕያው እንዲሆን ማስተዋልን፣ ቸርነትን፣ በጎነትንና ርህራኄን በተግባር የሚገልጡ ቃላቶች እንዲህ ይላሉ፡- «ዛሬም እወድሻለሁ! በቸልታ አልመለከትሽም»፡፡</string>
    <string name="tabfourheader">4. ሚስትህን አጋርህ አድርጋት!</string>
    <string name="tabfourmiddle">ሥራህ የሚስትህ ሥራ እንዳልሆነ አትቁጠር፡፡</string>
    <string name="tabfourdetails">በሌላ አባባል ስለ አንተ ሥራ ሚስትህ አያገባትም ብለህ አታስብ፡፡ አስተውል! ሚስትህ አጋርህ ነች እንጂ ንብረትህ አይደለችም፡፡ ሚስቱ አጋሩ እንደሆነች በመረዳት ጉዞውን የጀመረ ሰው የጋብቻ ሕይወቱ የደስታ መንገድ ይሆንለታል፡፡\n\n\t
          ወንዶች አድምጡ! ያላችሁት ጋብቻ በሚባል አጋርነት ውስጥ ነው፡፡ ሚስትህን ሳታማክር በአንድ የሥራ መስክ ከሌሎች ሰዎች ጋር ተሻርከህ የምትሠራ ከሆነ ልብዋ ከመሰበሩም በላይ ባላወቀችውና ባሌለችበት ነገር በላይዋ ላይ አስቸጋሪ ሸክም ትጭንባታለህ፡፡ \n\n\tሚስቶቻቸውን ከልባቸው የሚወዱና ይጨነቃሉ ብለው በመስጋት በገንዘብ  ጉዳይ  ምንም  ሳይናገሩ  ቀርተው በሚስቶቻቸው ላይ ከባድ ችግር የፈጠሩአንዳንድ ወንዶችን ተመልክቻለሁ፡፡\n\n\t
          እስኪ ቆም ብለህ አስብ! አንድ ትንሽ ንብረት ለመግዛት ስታስብ ምን ማድረግ እንደሚገባህ ለማወቅ ሕጋዊ ምክር ትጠይቃለህ፡፡ ማንኛውንም ንብረት ብትገዛ ስትሞት ለቤተሰብህ የፍርድ ቤት ክርክርና ሙግት ላለማስቀመጥ ስትል ተገቢ የሆነ የሕግ ምክር ትፈልጋለህ፡፡ \n\n\tይህ ሁሉ ጠቃሚና አስፈላጊ ነገር ነው፡፡ ሆኑም ከዚህ ሁሉ በፊት የምታደርገውን ሁሉ ለሚስትህ ማሳወቅ ቀዳሚ ተግባርህ ሊሆን ይገባል፡፡ መኪና ገዝተህ  ታክስ የምትከፈል እንኳ ቢሆን ሚስትህን ሳታሳውቃት በሚስጥር ልታደርገው አይገባህም፡፡ ጋብቻ ስኬታማ የሚሆነው አንዱ ለሌላው በግልፅነትና በታማኝነት ራሱን ሙሉ በሙሉ መስጠት ሲችል ነው፡፡</string>
    <string name="tabfiveheader">5. የሚስትህን ቦርሳ አትጭመቅ!</string>
    <string name="tabfivemiddle">ሚስትህን በገንዘብ ጉዳይ አታስጨንቃት ካለህ ገንዘብ ግማሹ የእርሷ ነውና!</string>
    <string name="tabfivedetails">አንተም ለእርሷ የምታወራርድ እስካልሆነ ድረስ እያንዳንዱን ሳንቲም እንድታወራርድ አትጠይቃት፡፡ በዚህ ጉዳይ ዘና ማለት የሚያስችላችሁ አንዳችሁ ለሌላችሁ የምትተዉት ግላዊ ነፃነት ሊኖራችሁ ይገባል፡፡ አንዳንድ ሚስቶች «መጨናነቅ ይሰማኛል» በማለት ይገልፁታል፡፡ «ለብዙ ዓመታት በነፃነት በራሴ ብኖርም አሁን ግን አግብቻለሁ፡፡ በማንኛውም ጊዜና ቦታ ለማጠፋው ለእያንዳንዱ ሳንቲም የተስተካከለ የሂሳብ ሪፖርት ማቅረብ ይጠበቅብኛል፡፡ ልክ ለአባትዋ ሪፖርት እንደምታቀርብ አንዲት ትንሽ ሴት ልጅ እንደሆንኩም ይሰማኛል» በማለት ይገልፁታል፡፡
          \n\n\tበጋብቻ ውስጥ ገንዘብ ወይም የገንዘብ እጥረት የግጭት ምክንያት ምናልባትም ቁጥር አንድ ችግር ሊባል ይችላል፡፡ በውስጡም ዋስትና ማጣትና ተስፋ መቁረጥ ተሰውረዋል፡፡ የገንዘብ ችግር በውስጣችን ያለውን ተስፋ መቁረጥ የሚገልጥ የመጀመሪያ ምልክት ነው፡፡ \n\n\tእግዚአብሔር በጋብቻ ውስጥ ላቀደው አንድነት ራሱን እንደሰጠ እና እርስ በእርስም እንደሚዋደድ ሰው አንዱ ለሌላው የነጻነት አየር መተንፈስ የሚያስችል በቂ እድል መስጠት መቻል ጥበብ ነው፡፡ ይህ የነጻነት አየር በምክንያት ላይ የተመሠረተ የገንዘብ አወጣጥን ይጨምራል፡፡</string>
    <string name="tabsixheader">6. በሥነ ሥርዓት ምሳሌ በመሆን ምራ! </string>
    <string name="tabsixmiddle">ቤተሰባዊ ሥነ ሥርዓትን ለመገንባት ከሚስትህ ጋር ተባበር፡፡</string>
    <string name="tabsixdetails">አንድ ክርስቲያናዊ መጽሔት በዚህ ዘመን ያሉ ክርስቲያኖች የሚያሳስቧቸው ነገሮች ምን እንደሆኑ ቃለ መጠይቅ አድርጎ በጻፈው ዘገባ ውስጥ ቀጥሎ ያሉት ሦስቱ እጅግ አሳሳቢዎች መሆናቸውን ገልጦአል፡፡ ሚስቶችም በትዳራቸው ውስጥ ከሚያሳስቧቸው ነገሮች መካከል ፈጥነው የሚያነሱአቸው እነዚህ ሦስቱን  ነገሮች ነው፡፡
         \n\n\t የመጀመሪያው አሳሳቢ ነገር ባልና ሚስት ስኬታማ በሆነ መንገድ መግባባት የሚችሉት እንዴት ነው? \n\n\tሁለተኛው አሳሳቢ ነገር ክርስቲያናዊውን እሴት ለልጆቻችን ማስተላለፍ የምንችለው እንዴት ነው?
          \n\n\tሦስተኛው አሳሳቢ ነገር ልጆቻችን ተገቢውን ሥነ ሥርዓት እንዲጠብቁ ማሰልጠን የምንችለው እንዴት ነው? የሚሉ ናቸው፡፡ \n\n\t ከፋፍለህ ግዛ የሚለው አባባል ያረጀ የጦር ሜዳ ስልት ብቻ ሆኖ አልቀረም፡፡ ዛሬም ስለ ጦር ኮሌጆችና ስለ ኒውትሮን ቦምብ ሳይሰማ ስልቱ በየቤቱ በስውር ሥራ ላይ ውሎ እናገኘዋለን፡፡ ለምሳሌ፡- ልጆች ወላጆቻቸው የሚጋጩበትን ሁኔታ መፍጠር የሚችሉ ከሆነ ጦርነቱን ማሸነፍ አያቅታቸውም፡፡ ስለዚህ ተግሳፅና ቅጣት ከባልና ሚስት ልባዊ ግነኙነቶች መካከል አንዱ ሊሆን ይገባል፡፡ አባቶች አድምጡ! ደስተኛ ቤተሰብ እንዲኖራችሁ ከፈለጋችሁ ልጆቻችሁን የመገሰፅና የመቅጣትን ጉዳይ ለሚስቶቻችሁ ብቻ አትተዉ፡፡ በሚቀጡበትም ጊዜ አብራችሁ መቆምን አትዘንጉ፡፡</string>
    <string name="tabsevenheader">7. ብላው ውደደውም!</string>
    <string name="tabsevenmiddle">ሚስትህ በምታዘጋጀው ምግብ አታጉረምርም የቤተሰቡን ሰላም ያጠፋልና፡፡</string>
    <string name="tabsevendetails">አንድ የአራት አመት ልጅ አባቱ ስለቀረበለት እራት ሲያጉረመርም ያደምጥና በጨዋነት እንደዚህ ሲል ይጠይቀዋል «አባባ እራት ልንበላ  ስንል የጸለይነውን ጸሎት እግዚአብሔር ሰምቶ አልን?፡፡ አባትም በችኮላ እንዴታ ልጄ ብሎ መለሰለት፡፡ ልጁም በመቀጠል አሁንስ ያልከውን ሰምቶአልን አባባ? ሲል አባቱን ደግሞ ጠየቀው በተናገረው ቃል በልጁ ወጥመድ ውስጥ የገባውም አባት በትክክል ሲል በአጽንኦት ይመልሳል፡፡ ልጁም እንደዚህ ከሆነ እርሱ የሚቀበለው የትኛውን ንግግርህን ነው?» ሲል አፋጠጠው ይባላል፡: \n\n\t
          እማርበት በነበረው ኮሌጅ ውስጥ አንድ የተማሪዎች መመሪያ መጽሐፍ ነበር፡፡ በዚህ መጽሐፍ ውስጥ ከተዘረዘሩት ሕጎች አንዱ እንደዚህ ይላል፡- «ገንቢ ሀሳቦች ይደነቃሉ፤ ማጉረምረም ያስቀጣል»፡፡ በትክክል ብለውታል፡፡ \n\n\t ማጉረምረምና አፍራሽ መንፈስ ስለሚጋባ ተማሪዎችን ያበላሻል፡፡ በአንፃሩ ደግሞ ኮሌጁ ለእያንዳንዱ ሰው የተሻለ ስፍራ እንዲሆን አዎንታዊነት ያላቸው አስተያየቶች ጠቃሚ መሆናቸውን ለማመልከት ታስቦ የተጻፈ አባባል ነበር፡፡ ልክ እንደዚሁ ለሚስቶቻችሁ ገንቢ ሀሳብ መስጠት ተገቢ ሲሆን በቀረበላችሁ ነገር ማጉረምረም ግን አፍራሽ ተጽዕኖው ከፍተኛ መሆኑን አትዘንጉ፡፡</string>
    <string name="tabeightheader">8. በሥራ ቦታህ የተፈጠረብህን ጫና እዚያው ተወው</string>
    <string name="tabeightmiddle">ወደ ቤትህ በደስታና በፈገግታ ግባ፡፡</string>
    <string name="tabeightdetails">ሚስትህ ያገባችው ሰው እንጂ ድብ እንዳልሆነ ሁልጊዜ አስታውስ! \n\t
          ወደ ቤቱ ሲገባ ሚስቱን በክንዱ በማቀፍ በፍቅር ከመሳሙ በፊት ባርኔጣውን    እንኳ ስለማያወልቅ ሰው ሰምተህ ይሆናል፡፡ አንድ ሰው ወደ ገዛ ቤቱ ሲመጣ በቤቱ ውስጥ እንደፈለገው መሆን አይችልም እንዴ? ትል ይሆናል፡፡ በእርግጥ ትችላለህ፡፡
          ነገር ግን አንተ ሰው! በቢሮህ ላሉ የሥራ ባልደረቦችህ የምታሳየውን የወዳጅነትና የአክብሮት መንፈስ ለቤተሰብህ አባላትም ለማሳየት መጣር ይገባሃል፡፡ \n\n\tቤትህ  በቀኑ መጨረሻ ዓለምን ወደ ኋላ ትተህ የምታርፍበት የምትዝናናበት ስፍራ እንደሆነ አትዘንጋ፡፡ ዛሬ የበራ ፊት ይዘህ ወደ ቤትህ የምትገባ ከሆነ ደግሞ የበለጠ አስደሳች የመኖሪያ ስፍራ ልታደርገው ትችላለህ፡፡ የፀሐይ ብርሃን ሙቀቱና ውበቱ ያለገደብ የሚዳረስ ነው፡፡ ጭጋግና ደመና ግን ደስታንና ሰላምን የሚያጠፋ የድብርት ዝናብን ያዘንባሉ፡፡ ስለዚህ ፊትህ በቤትህ ውስጥ ለሁሉም እንደሚዳረስ የፀሐይ ብርሃን የበራ ይሁን፡፡</string>
    <string name="tabnineheader">9. ከሚስትህ ጋር ቁም!</string>
    <string name="tabninemiddle">ሚስትህን ማንም ሰው ቢሆን በፊትህ እንዲነቅፋት አትፍቀድ፡፡ አባትህም፣ እናትህም፣ ወንድሞችህም፣ እህቶችህም፣ ሌሎች ዘመዶ ችህም ቢሆኑ አትተባበራቸው፡፡</string>
    <string name="tabninedetails">በባህላችን አንዱ ለሌላው መቆም በጣም የተለመደ ነገር ላይሆን ይችላል፡፡ ሆኖም ለትዳር ጓደኛህ ታማኝ እስከሆንክ ድረስ ልታደርገው የሚገባ ጉዳይ ነው፡፡ መጽሐፍ ቅዱሳችን አምስት ጊዜ እንደዚህ ብሏል «ሰው አባቱንና እናቱን ይተዋል ከሚስቱም ጋር ይጣበቃል ሁለቱም አንድ ሥጋ ይሆናሉ»፡፡\n\n\t
          አንዳንድ የሚስትህ ድካሞች በቤተሰቦችህ እንደሚታወቁ ምንም ጥርጥር የለውም፡፡ አንተም ለነዚህ ድካሞች እውር አይደለህም፡፡ እዚያው ስለሆኑ ታውቃቸዋለህ፡፡ \n\n\t ነገር ግን ባል ሆይ! ዘመዶችህ ውስጣዊ ውበቷንና ባህሪዋን በጥልቀት አልተመለከቱም፡፡ በማንነቷ ተስበህ ያገባሃት አንተ ነህ፡፡ ደግሞ ም አብረሃት የምትኖረው አንተው ነህ፡፡ አባትህ ወይም እናትህ ወንድምህ ወይም በቢሮህ የምታውቀው የሥራ ባልደረባህ አይደሉም፡፡ ስለዚህ የእነርሱን ነቀፋ የመስማት ግዴታ የለብህም፡፡</string>
    <string name="tabtenheader">10.  መንፈሳዊ መሪ ሁን!</string>
    <string name="tabtenmiddle">ሕግ ቁጥር አሥር፡-ቤትህን አትርሳ ቅዱስ አድርገህም ጠብቀው፡፡</string>
    <string name="tabtendetails">ብዙ ጊዜ ሚስቶች ከሚያሰሙት እሮሮ ውስጥ አንዱ ባሎቻቸው በቤት ውስጥ በተለይም በመንፈሳዊ ጉዳይ ላይ አመራር ለመስጠት አለመፍቀዳቸውን ነው፡፡ ባሎች ሆይ! የቤተሰቡን አምልኮ ጊዜ መምራትና ልጆችን ወደ ቤተክርስቲያን መውሰድ የሚስቶች ቀላል ኃላፊነት ነው ብላችሁ አታስቡ፡፡\n\n\t
          ለቤተሰባችሁ ምሳሌ በመሆን እሁድ በማለዳ ተነስታችሁ ቤተሰባችሁን ለአምልኮ ወደ ቤተክርስቲያን እንድትወስዱ ደግሞም የቤተሰባችሁን አባላት ነፍስ ለመመገብ ኃላፊነትን እድትወስዱ እግዚአብሔር ይጠብቅባችኋል፡፡ አስተውሉ! ይህንን ለእናንተ ማንም ቢሆን አይሰራላችሁም፡፡
          \n\n\tባሎች ሆይ፡- አካሄዳችሁን ከእግዚአብሔር ጋር የምታደርጉ ከሆነና ቃሉንም የሕይወታችሁ መመሪያ የምታደርጉት ከሆነ እግዚአብሔር እናንተንና ቤተሰባችሁን ሲባርክ  ታያላችሁ፡፡</string>
    <string name="tabfoneheader">1. ሴትነትሽን ተቀበይው ወይንም አትፈሪበት!</string>
    <string name="tabfonemiddle">ባለቤትሽ በሚያኖርሽ ቤት ውስጥ ዕድሜሽ እንዲረዝም ሴትነትሽን አክብሪው፡፡</string>
    <string name="tabfonedetails">ይህ አባባል የሴቶች መብት ተሟጋቾች መንፈስ ያለበት ይመስላል፡፡ ነገር ግን የሴትነትን ክብር በሚያጎላው ክርስቲያናዊ እውነት ላይ የተመሠረተ ሀሳብ ነው፡፡ \n\n\tጌታችን ኢየሱስ ክርስቶስ በምድር በነበረበት ዘመን ስለ ሴቶች የነበረውን የተዛባ አመለካከት በፅኑ ሰብሮታል፡፡ ሴትን መንካት የሞተን ነገር እንደ መንካት አድርገው በሚቆጥሩና በሚፀየፉ የአይሁድ መምህራን መካከል ጌታችን ኢየሱስ ክርስቶስ እንደ ማርያምና ማርታ፣ መግደላዊት ማርያምና ሌሎችም ሴቶች ተከታዮች እንደነበሩት ቃሉ ይነግረናል፡፡
          \n\n\tሐዋርያው ጳውሎስ በገላትያ 3፡28 ላይ ወንድና ሴት በክርስቶስ ልዩነት እንደሌላቸውና በእርሱም ፊት ዋጋቸው የማይበላለጥ መሆኑን አረጋግ ጦልናል፡፡ ይህ ማለት ግን በፍጥረታቸው እግዚአብሔር አስቀድሞ ያስቀመጠውን ልዩነትና ያላቸውን ሚና አጥፍቶታቷል ማለት አይደለም፡፡ ሊያስተላልፈው የፈለገው መልእክት ሴቶች በማንነታቸው የበታችነት ወይም እፍረት ሊሰማቸው እንደማ ይገባ ማስገንዘብ ነው፡፡
          \n\n\tአስታውሱ! በመጀመሪያው የገና ንጋት የእግዚአብሔርን ልጅ ኢየሱስ ክርስቶስን የወለደችው ሴት ነበረች፡፡ እግሮቹን በእንባዋ ያራሰች በፀጉሯም ያበሰች ውድና የከበረ የሽቱ ስጦታዋንም ለመቃብሩ አስቀድማ ያፈሰሰች ሴት ነበረች፡፡ በመስቀሉ አጠገብ እስከመጨረሻው የነበሩትና በመቃብሩ ቦታ  በመጀመሪያ የተገኙት ሴቶች ነበሩ፡፡ ሕያው መሆኑንና ትንሳኤውን በመጀመርያ ያየችውና ያበሰረችውም ሴት ነበረች፡፡ ስለዚህ ሴትነትሽን አክብሪ ደግሞም በፍፁም አትፈሪበት!
          በግልሽ ያለሽን ራስ መተማመን ለማሳደግ ምን ምን እርምጃዎችን ትወስጃለሽ? </string>
    <string name="tabftwoheader">2. ባለሽ ገንዘብ ወይም በበጀትሽ ኑሪ!</string>
    <string name="tabftwomiddle">ብዙ ዓመታት ደክሞ ባከማቸው ገንዘብ የምትፈልጊውን ያደርግልሽ</string>
    <string name="tabftenmiddle">መንገድሽን ለጌታ ለአምላክሽ አሳልፈሽ ስጪ ልጆችሽም ተነስተው የተባረክሽ እናት ብለው ይጠሩሻል፡፡</string>
    <string name="tabftendetails">ወራትና ዓመታት ባለፉ መጠን እያንዳንዷ ሚስት በእምነቷና በቤትዋ ልዩ ልዩ ተግዳሮቶችን ትጋፈጣለች፡፡ አንቺም የተለየሽ አይደለሽም፡፡ \n\n\tበጌታ ያለሽ እምነት በሕይወት ማዕበል ውስጥ ስትጓዢ እንደ መልህቅ ሆኖ ያፀናሻል እንጂ ከመፈተን ነጻ አያደርግሽም፡፡ ስለዚህ በአምላክሽ ላይ በመታመን በመንገዱ እንዲመራሽ ልትፈ ቅጂለት ይገባል (ምሳ 3፡5-6 ተመልከቺ)፡፡</string>
   <string name="teleeshtaolphone">+251911202110</string>
   <string name="explanation">ቴሌ ኤሽታኦል የስልክ አገልግሎት </string>
   <string name="send">ይላኩ</string>
</resources>