<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0b4b9c" >



<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#003982"
    android:orientation="vertical" >

    
   

    <TextView
        android:id="@+id/tabtenmiddle"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
     
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/tabtenmiddle"
        android:textColor="#ffcc00"
        android:textSize="20sp" 
        android:background="@drawable/realtransparent"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView 
        android:id="@+id/tabtendetails"
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
       android:layout_below="@+id/tabtenmiddle"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:layout_marginLeft="5dp"
        android:text="@string/tabtendetails"
        android:textColor="#ffffff"
       android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/tabtendetails"
        android:text="@string/footer"
        android:textColor="#ffcc00"
        android:background="@drawable/realtransparent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

</RelativeLayout>

</ScrollView>
