<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/malebackground" >
 <TextView
          android:id="@+id/textViewPhoneNo"
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:text="@string/explanation"
           android:textColor="#ffffff" 
           android:textSize="20dp"
           android:layout_marginTop="20dp"/>
     <TextView 
         android:id="@+id/editTextPhoneNo" 
         android:layout_width="fill_parent" 
         android:layout_height="50dp" 
         android:layout_below="@+id/textViewPhoneNo"
         android:layout_marginTop="10dp"
         android:text="@string/teleeshtaolphone"
         android:inputType="phone"
         android:textColor="#ffcc00"
         android:background="@drawable/realtransparent"
         android:editable="false"
         android:textSize="35dp"
         android:gravity="center_vertical"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
     
     <TextView 
         android:id="@+id/textViewMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
         android:text="ሜሴጅ ይፃፉ"
         android:layout_below="@+id/editTextPhoneNo"
         android:layout_marginTop="30dp" 
         android:textColor="#ffffff"
         android:textSize="20dp"/>

      <EditText
          android:id="@+id/editTextSMS"
          android:layout_width="fill_parent"
          android:layout_height="90dp"
          android:layout_below="@+id/textViewMessage"
          android:layout_marginTop="10dp"
          android:background="#ffffff"
          android:textColor="#000000"
           android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:gravity="top"
         />

       <Button
           android:id="@+id/btnSendSMS"
           android:layout_width="fill_parent"
           android:layout_height="50dp"
          
          
           android:background="@drawable/realtransparent"
           android:gravity="center_horizontal"
           android:text="@string/send"
           android:textColor="#ffcc00"
           android:textSize="45dp"
           android:layout_marginTop="300dp" />

</RelativeLayout>
